--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,10 @@
             <h2>Project 1: Web Development Portfolio</h2>
             <p>A responsive portfolio website showcasing my skills and projects.</p>
         </div>
+        <div class="project">
+            <h2>Project 2: Sign In</h2>
+            <p>A simple and elegant registration form created with HTML, CSS, and JavaScript. This project includes a styled form for user login with basic validation and interactive elements.</p>
+        </div>
     </section>
     
     <footer>
