--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     
     <section id="projects" class="projects">
         <div class="project">
-            <a href="projects.html" class="project-link"><h2>Project 1: Web Development Portfolio</h2></a>
+            <a href="https://shekfi-berisha.github.io/Portfolio" class="project-link"><h2>Project 1: Web Development Portfolio</h2></a>
             <p>A responsive portfolio website showcasing my skills and projects.</p>
         </div>
         <div class="project">
-            <h2>Project 2: Sign In</h2>
+            <a href="https://shekfi-berisha.github.io/sign-in"><h2>Project 2: Sign In</h2></a>a>
             <p>A simple and elegant registration form created with HTML, CSS, and JavaScript. This project includes a styled form for user login with basic validation and interactive elements.</p>
         </div>
     </section>
